; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_create_distributed_table.c_CreateHashDistributedTableShards.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_create_distributed_table.c_CreateHashDistributedTableShards.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidOid = common dso_local global i64 0, align 8
@ShardCount = common dso_local global i32 0, align 4
@ShardReplicationFactor = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64, i32)* @CreateHashDistributedTableShards to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CreateHashDistributedTableShards(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i64, i64* %4, align 8
  %9 = call i64 @RegularTable(i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i64, i64* %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @CanUseExclusiveConnections(i64 %12, i32 %13)
  store i32 %14, i32* %7, align 4
  br label %15

15:                                               ; preds = %11, %3
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* @InvalidOid, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @CreateColocatedShards(i64 %20, i64 %21, i32 %22)
  br label %30

24:                                               ; preds = %15
  %25 = load i64, i64* %4, align 8
  %26 = load i32, i32* @ShardCount, align 4
  %27 = load i32, i32* @ShardReplicationFactor, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @CreateShardsWithRoundRobinPolicy(i64 %25, i32 %26, i32 %27, i32 %28)
  br label %30

30:                                               ; preds = %24, %19
  ret void
}

declare dso_local i64 @RegularTable(i64) #1

declare dso_local i32 @CanUseExclusiveConnections(i64, i32) #1

declare dso_local i32 @CreateColocatedShards(i64, i64, i32) #1

declare dso_local i32 @CreateShardsWithRoundRobinPolicy(i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
